# deepiri-prismpipe

./: .gitignore  Dockerfile  README.md  pyproject.toml  server.py
.github/codeql/: README.md  codeql-config.yml
.github/workflows/: ci.yaml  codeql.yml  release.yaml
docs/: PRODUCTION_PLAN.md  architecture.md  protocol.md
examples/ai_pipeline/: pipeline.py
examples/data_pipeline/: basic_api.py  deepiri_integration.py  pipeline.py  sdk_example.py
examples/http_api/: main.py
helm/prismpipe/: Chart.yaml  values.yaml
helm/prismpipe/templates/: configmap.yaml  deployment.yaml
k8s/: configmap.yaml  deployment.yaml  namespace.yaml  service.yaml
scripts/: install.sh
sdk/python/: __init__.py
src/prismpipe/: __init__.py  computation.py  config.py  deepiri_bus.py  dna.py  events.py  exceptions.py  features.py  intent.py  logging.py  memory_graph.py  metrics.py  partial.py  resilience.py  storage.py  swarm.py  tenancy.py
src/prismpipe/core/: __init__.py  envelope.py  node.py  pipeline.py  router.py
src/prismpipe/document/: __init__.py  vectorize.py
src/prismpipe/engine/: __init__.py
src/prismpipe/organic/: __init__.py
src/prismpipe/organic/computation/core/: __init__.py  result.py
src/prismpipe/organic/computation/handlers/: __init__.py
src/prismpipe/organic/computation/runtime/: __init__.py  base.py  python.py
src/prismpipe/organic/computation/sandbox/: __init__.py  ast_sandbox.py
src/prismpipe/organic/dna/: __init__.py
src/prismpipe/organic/dna/core/: __init__.py  genome.py  population.py
src/prismpipe/organic/dna/evaluators/: __init__.py  fitness.py
src/prismpipe/organic/dna/operators/: __init__.py  crossover.py  mutate.py
src/prismpipe/organic/dna/selectors/: __init__.py  tournament.py
src/prismpipe/organic/intent/: __init__.py
src/prismpipe/organic/intent/core/: __init__.py  intent.py  path.py  planner.py
src/prismpipe/organic/intent/learning/: __init__.py  history.py
src/prismpipe/organic/intent/registry/: __init__.py
src/prismpipe/organic/memory_graph/: __init__.py
src/prismpipe/organic/memory_graph/core/: __init__.py  graph.py  node.py
src/prismpipe/organic/memory_graph/inheritance/: __init__.py  selector.py
src/prismpipe/organic/memory_graph/similarity/: __init__.py  hash.py
src/prismpipe/organic/memory_graph/storage/: __init__.py  memory.py
src/prismpipe/organic/partial/: __init__.py
src/prismpipe/organic/partial/aggregators/: __init__.py  combiner.py
src/prismpipe/organic/partial/continuators/: __init__.py  background.py
src/prismpipe/organic/partial/core/: __init__.py  engine.py  partial_result.py  task.py
src/prismpipe/organic/partial/estimators/: __init__.py  heuristic.py
src/prismpipe/organic/swarm/: __init__.py
src/prismpipe/organic/swarm/core/: __init__.py  coordinator.py
src/prismpipe/organic/swarm/partitioners/: __init__.py  hash.py
src/prismpipe/organic/swarm/reducers/: __init__.py  collect.py
src/prismpipe/revolutionary/: __init__.py
src/prismpipe/revolutionary/computation/core/: contract.py  payload.py
src/prismpipe/revolutionary/computation/handlers/: __init__.py  registry.py
src/prismpipe/revolutionary/computation/runtime/: base.py  python.py
src/prismpipe/revolutionary/computation/sandbox/: __init__.py  base.py
src/prismpipe/revolutionary/dna/core/: __init__.py  population.py
src/prismpipe/revolutionary/dna/operators/: __init__.py  crossover.py  mutate.py
src/prismpipe/revolutionary/dna/selectors/: __init__.py  tournament.py
src/prismpipe/revolutionary/intent/learning/: __init__.py
src/prismpipe/revolutionary/intent/registry/: __init__.py  capability_registry.py
src/prismpipe/revolutionary/memory_graph/core/: __init__.py
src/prismpipe/revolutionary/memory_graph/inheritance/: selector.py
src/prismpipe/revolutionary/memory_graph/storage/: memory.py
src/prismpipe/revolutionary/partial/: __init__.py
src/prismpipe/revolutionary/partial/aggregators/: combiner.py
src/prismpipe/revolutionary/partial/continuators/: __init__.py  background.py
src/prismpipe/revolutionary/partial/core/: __init__.py  engine.py
src/prismpipe/revolutionary/swarm/core/: __init__.py  coordinator.py  result.py  swarm.py
src/prismpipe/revolutionary/swarm/reducers/: collect.py
src/prismpipe/sdk/: __init__.py
tests/: test_core.py  test_deepiri_bus.py  test_document_vectorize.py  test_engine_organism_child_execution.py  test_runtime_limits_and_cache.py  test_runtime_swarm.py  test_runtime_time_split.py
