[tool.poetry]
name = "deepiri-prismpipe"
version = "0.2.0"
description = "Capability-Routed API Pipeline - Requests become the carrier of computation"
readme = "README.md"
authors = ["Deepiri Team <team@deepiri.ai>"]
keywords = ["api", "pipeline", "capability", "routing", "microservices", "framework"]
license = "MIT"
packages = [{include = "prismpipe", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = ">=2.0.0"
httpx = ">=0.27.0"
structlog = ">=24.0.0"
orjson = ">=3.10.0"
pyyaml = ">=6.0.0"
fastapi = {version = ">=0.115.0", optional = true}
uvicorn = {version = ">=0.30.0", optional = true}
gunicorn = {version = ">=22.0.0", optional = true}
pytest = {version = "^8.0.0", optional = true}
pytest-asyncio = {version = "^0.24.0", optional = true}
pytest-cov = {version = "^5.0.0", optional = true}
ruff = {version = "^0.6.0", optional = true}
mypy = {version = "^1.11.0", optional = true}
pre-commit = {version = "^4.0.0", optional = true}
black = {version = ">=24,<27", optional = true}

[tool.poetry.extras]
server = ["fastapi", "uvicorn", "gunicorn"]
all = ["fastapi", "uvicorn", "gunicorn"]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "ruff", "mypy", "pre-commit", "black"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
ruff = "^0.6.0"
mypy = "^1.11.0"
pre-commit = "^4.0.0"
black = ">=24,<27"

[tool.poetry.urls]
Homepage = "https://github.com/Team-Deepiri/deepiri-prismpipe"
Repository = "https://github.com/Team-Deepiri/deepiri-prismpipe"
Documentation = "https://docs.deepiri.ai/prismpipe"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN"]
ignore = ["E501", "ANN401"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
